# FreeCAD

.github/workflows/: sub_buildUbuntu2004.yml  sub_buildUbuntu2204.yml  sub_buildUbuntu2204Conda.yml
cMake/: Findpybind11.cmake
cMake/FreeCAD_Helpers/: SetupPybind11.cmake
src/App/: Application.cpp  Application.h  ApplicationPy.cpp  CMakeLists.txt  Document.cpp  Document.h  DocumentObject.cpp  DocumentObject.h  DocumentObjectInfo.h  DocumentObjectPyImp.cpp  Expression.cpp  Expression.h  ExpressionAny.cpp  ExpressionAny.h  ExpressionComponent.cpp  ExpressionComponent.h  ExpressionParser.cpp  ExpressionParser.h  ExpressionParser.tab.c  ExpressionParser.y  Graphviz.cpp  OriginGroupExtension.cpp  Property.cpp  Property.h  PropertyContainer.cpp  PropertyContainer.h  PropertyGeo.cpp  (+11 more)
src/Mod/NamedSketcher/: CMakeLists.txt  Init.py  InitGui.py  NamedSketcherGlobal.h
src/Mod/NamedSketcher/App/: AppNamedSketcher.cpp  AppNamedSketcherPy.cpp  CMakeLists.txt  Module.pybind.cpp  NamedSketch.cpp  NamedSketch.h  NamedSketch.pybind.cpp  NamedSketch.pybind.h  NamedSketchPy.xml  NamedSketchPyImp.cpp  PreCompiled.h  Reference.pybind.cpp  Reference.pybind.h
src/Mod/NamedSketcher/App/constraints/: Constraint.pybind.cpp  Constraint.pybind.h  ConstraintBase.cpp  ConstraintBase.h  ConstraintBasePy.xml  ConstraintBasePyImp.cpp  ConstraintBlockPoint.cpp  ConstraintBlockPoint.h  ConstraintCoincident.cpp  ConstraintCoincident.h  ConstraintCoincidentPy.xml  ConstraintCoincidentPyImp.cpp  ConstraintConstant.cpp  ConstraintConstant.h  ConstraintDistance.cpp  ConstraintDistance.h  ConstraintEqual.cpp  ConstraintEqual.h  ConstraintFactory.cpp  ConstraintFactory.h  ConstraintHorizontal.cpp  ConstraintHorizontal.h  ConstraintPointAlongCurve.cpp  ConstraintPointAlongCurve.h  ConstraintPointSymmetric.cpp  ConstraintPointSymmetric.h  ConstraintTangentCurves.cpp  ConstraintTangentCurves.h  ConstraintVertical.cpp  ConstraintVertical.h  ConstraintXDistance.cpp  ConstraintXDistance.h  ConstraintYDistance.cpp  ConstraintYDistance.h  PropertyConstraintList.cpp  PropertyConstraintList.h
src/Mod/NamedSketcher/App/constraints/point_along_curve/: PointAlongCurveBase.h  PointAlongCurveCircle.cpp  PointAlongCurveCircle.h  PointAlongCurveGeneric.cpp  PointAlongCurveGeneric.h  PointAlongCurveLine.cpp  PointAlongCurveLine.h
src/Mod/NamedSketcher/App/constraints/tangent_curves/: TangentCurvesBase.h  TangentCurvesCircleCircle.cpp  TangentCurvesCircleCircle.h  TangentCurvesGeneric.cpp  TangentCurvesGeneric.h  TangentCurvesLineCircle.cpp  TangentCurvesLineCircle.h  TangentCurvesLineLine.cpp  TangentCurvesLineLine.h
src/Mod/NamedSketcher/App/gcs_solver/: ImprovedMatrix.h  LinearTransform.cpp  LinearTransform.h  LinearTransform.inc  Orthonormalization.cpp  Orthonormalization.h  ParameterGroup.cpp  ParameterGroup.h  ParameterProxyManager.cpp  ParameterProxyManager.h  ParameterVector.cpp  ParameterVector.h  ProxiedParameter.cpp  ProxiedParameter.h  README.md  Shaker.h  System.cpp  System.h  Types.h  Vector.h  Vector.inc
src/Mod/NamedSketcher/App/gcs_solver/equations/: Colinear.cpp  Colinear.h  ConcorrentCurves.cpp  ConcorrentCurves.h  ConcurrentCurves.cpp  ConcurrentCurves.h  Constant.cpp  Constant.h  Difference.cpp  Difference.h  Distance.cpp  Distance.h  Equal.cpp  Equal.h  Equation.cpp  Equation.h  EquationProxy.cpp  EquationProxy.h  MediumParameter.cpp  MediumParameter.h  OrthogonalDisplacement.cpp  OrthogonalDisplacement.h  ParallelCurves.cpp  ParallelCurves.h  PointAlongCurve.cpp  PointAlongCurve.h
src/Mod/NamedSketcher/App/gcs_solver/linear_solvers/: BiCG.cpp  BiCG.h  Ldlt.cpp  Ldlt.h  SimpleSolver.cpp  SimpleSolver.h  SolverBase.cpp  SolverBase.h
src/Mod/NamedSketcher/App/gcs_solver/parameters/: Parameter.cpp  Parameter.h  ParameterDeltaMapper.h  ParameterGroup.cpp  ParameterGroup.h  ParameterGroupManager.cpp  ParameterGroupManager.h  ParameterProxy.cpp  ParameterProxy.h  ParameterProxyManager.cpp  ParameterProxyManager.h  ParameterShaker.h  ParameterValueMapper.h  Vector.cpp  Vector.h
src/Mod/NamedSketcher/App/geometries/: Geometry.pybind.cpp  Geometry.pybind.h  GeometryBase.cpp  GeometryBase.h  GeometryBase.inc  GeometryBasePy.xml  GeometryBasePyImp.cpp  GeometryCircle.cpp  GeometryCircle.h  GeometryFactory.cpp  GeometryFactory.h  GeometryLineSegment.cpp  GeometryLineSegment.h  GeometryLineSegmentPyImp.cpp  GeometryPoint.cpp  GeometryPoint.h  GeometryPointPy.xml  PropertyGeometryList.cpp  PropertyGeometryList.h
src/Mod/NamedSketcher/App/python/: __init__.py
src/Mod/NamedSketcher/App/python/utils/: __init__.py  make_sketch.py
src/Mod/NamedSketcher/NamedSketcherGui/: CMakeLists.txt  NamedSketcherResources.pybind.cpp  NamedSketcherResources.qrc  NamedSketcherResourcesLoader.cpp  __init__.py
src/Mod/NamedSketcher/NamedSketcherGui/ConstraintCreation/: BlockPoint.py  ConstraintBlockPoint.py  ConstraintCoincident.py  ConstraintConstant.py  ConstraintEqual.py  ConstraintHorizontal.py  ConstraintPointAlongCurve.py  ConstraintPointSymmetric.py  ConstraintTangentCurves.py  ConstraintVertical.py  ConstraintXDistance.py  ConstraintYDistance.py  Distance.py  PointAlongCurve.py  PointSymmetric.py  TangentCurves.py  XDistance.py  YDistance.py  __init__.py
src/Mod/NamedSketcher/NamedSketcherGui/GeometryCreation/: Circle.py  FromDraft.py  LineSegment.py  Point.py
src/Mod/NamedSketcher/NamedSketcherGui/ViewProviders/: ViewProviderNamedSketch.cpp  ViewProviderNamedSketch.h
src/Mod/NamedSketcher/Scripts/: CMakeLists.txt  Init.py  InitGui.py
src/Mod/NamedSketcher/Scripts/NamedSketcher/utils/: Draft2NamedSketch.py  Tolerance.py
src/Mod/NamedSketcher/Scripts/NamedSketcherGui/ConstraintCreation/: Coincident.py  Horizontal.py  LineSymmetric.py  Vertical.py  __init__.py
src/Mod/NamedSketcher/Scripts/NamedSketcherGui/Draw/: __init__.py
src/Mod/NamedSketcher/Scripts/NamedSketcherGui/Draw/DrawMode/: __init__.py
src/Mod/NamedSketcher/Scripts/NamedSketcherGui/GeometryCreation/: Circle.py  FromDraft.py  LineSegment.py  __init__.py
src/Mod/NamedSketcher/Scripts/NamedSketcherGui/ViewProviders/: NamedSketch.py
(+280 files in other folders)
